--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,49 @@
 @import "reset.css";
+@import url("https://fonts.googleapis.com/css2?family=Rubik:wght@400;700&display=swap");
+* {
+  font-family: "Rubik", sans-serif;
+  font-size: 18px;
+}
+
+header {
+  background: #111111;
+  height: 80px;
+}
+header ul {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 956px;
+}
+
+.header {
+  margin: 0 auto;
+  height: 80px;
+  width: 1296px;
+  color: #FFFFFF;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header_basket {
+  position: relative;
+}
+
+.header_basket__quantity {
+  background: #FCB500;
+  color: #111111;
+  width: 16px;
+  height: 16px;
+  border-radius: 8px;
+  font-size: 12px;
+  font-weight: 700;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  left: 21px;
+  bottom: -6px;
+}
 
 /*# sourceMappingURL=style.css.map */
