feat: complete start page

--- a/styles/style.sass
+++ b/styles/style.sass
@@ -46,3 +46,60 @@ header
   position: absolute
   left: 21px
   bottom: -6px
+
+.startPage_wrapper
+  height: 792px
+  background: $yellow
+
+.startPage
+  margin: 0 auto
+  width: 1314px
+  display: flex
+
+h1
+  font-size: 144px
+  font-weight: 700
+  line-height: 152px
+  text-align: left
+  color: $white
+  margin-top: 105px
+  z-index: 5
+  position: relative
+
+.startPage_info-textH1
+  font-size: 24px
+  font-weight: 400
+  line-height: 28px
+  width: 657px
+  margin-top: 30px
+
+h2
+  font-size: 36px
+  font-weight: 700
+  line-height: 43px
+  margin-top: 109px
+
+.startPage_info-textH2
+  line-height: 21px
+  width: 350px
+  margin-top: 8px
+
+.startPage_imgs
+  position: relative
+  right: 430px
+
+#startPage_imgs-lemon, #startPage_imgs-nootris,
+#startPage_imgs-ginger
+  position: absolute
+
+#startPage_imgs-lemon
+  left: -283px
+  top: 441px
+
+#startPage_imgs-nootris
+  bottom: -1px
+  left: 108px
+
+#startPage_imgs-ginger
+  bottom: 15px
+  left: -66px
