feat: refactor header

--- a/styles/style.css
+++ b/styles/style.css
@@ -16,12 +16,13 @@ header ul {
   align-items: center;
   justify-content: space-between;
   width: 956px;
+  padding-left: 13px;
 }
 
 .header {
   margin: 0 auto;
   height: 80px;
-  width: 1296px;
+  width: 1310px;
   color: #FFFFFF;
   display: flex;
   justify-content: space-between;
@@ -30,6 +31,10 @@ header ul {
 
 .header_basket {
   position: relative;
+}
+
+.header_basket-img {
+  margin-right: 22px;
 }
 
 .header_basket__quantity {
