--- a/styles/style.sass
+++ b/styles/style.sass
@@ -21,11 +21,12 @@ header
     align-items: center
     justify-content: space-between
     width: 956px
+    padding-left: 13px
 
 .header
   margin: 0 auto
   height: 80px
-  width: 1296px
+  width: 1310px
   color: $white
   display: flex
   justify-content: space-between
@@ -33,6 +34,9 @@ header
 
 .header_basket
   position: relative
+
+.header_basket-img
+  margin-right: 22px
 
 .header_basket__quantity
   background: $orange
