--- a/styles/style.sass
+++ b/styles/style.sass
@@ -58,8 +58,9 @@ header
   position: absolute
   z-index: 2
   top: 9px
-  background-image: url(../img/separation.png)
-  background-size: 100%
+  img
+    width: 99vw
+    height: 97px
 
 .startPage_wrapper
   height: 792px
