--- a/styles/style.sass
+++ b/styles/style.sass
@@ -10,6 +10,7 @@ $orange: #FCB500
 *
   font-family: "Rubik", sans-serif
   font-size: 18px
+  border: 1px solid red
 
 header
   background: $black
@@ -22,6 +23,9 @@ header
     justify-content: space-between
     width: 956px
     padding-left: 13px
+
+a
+  color: $white
 
 .header
   margin: 0 auto
@@ -59,7 +63,7 @@ header
   z-index: 2
   top: 9px
   img
-    width: 99vw
+    width: 100%
     height: 97px
 
 .startPage_wrapper
@@ -220,3 +224,65 @@ button
   background: $orange
   line-height: 21.33px
   margin-top: 66px
+  &:hover
+    background: #FCDA28
+  &:active
+    transform: scale(1.1)
+
+@media (min-width: 992px) and (max-width: 1391px)
+  .header
+    width: 960px
+    ul
+      width: 770px
+      padding: 0
+      li
+        font-size: 16px
+
+  .header_basket-img
+    margin: 0
+
+  .startPage
+    width: 960px
+
+  h1
+    font-size: 95px
+
+  .startPage_info-textH1
+    font-size: 18px
+    line-height: 28px
+    width: 495px
+    margin-top: 15px
+
+  .startPage_info-textH1, .salePage_info-text2
+    font-size: 16px
+
+  h2
+    margin-top: 90px
+    font-size: 34px
+
+  #startPage_imgs-ginger
+    bottom: -19px
+    left: -60px
+
+  #startPage_imgs-nootris
+    bottom: -35px
+    left: 140px
+
+  #startPage_imgs-lemon
+    left: -252px
+    top: 448px
+
+  .salePage_info
+    width: 960px
+
+/* Portrait tablets and small desktops */
+@media (min-width: 768px) and (max-width: 991px)
+
+/* Landscape phones and portrait tablets */
+@media (max-width: 767px)
+
+/* Portrait phones and smaller */
+@media (max-width: 480px)
+
+/* Iphone 5 */
+@media (max-width: 320px)
