--- a/styles/style.css
+++ b/styles/style.css
@@ -441,8 +441,195 @@ button:active {
     margin-top: 20px;
   }
 }
-/* Landscape phones and portrait tablets */
-/* Portrait phones and smaller */
-/* Iphone 5 */
+@media (min-width: 480px) and (max-width: 767px) {
+  header {
+    position: fixed;
+    z-index: 10;
+    width: 100%;
+  }
+  .header {
+    width: 420px;
+  }
+  .header_basket {
+    left: 130px;
+  }
+  .startPage {
+    width: 450px;
+  }
+  .header_menu-btn {
+    display: block;
+  }
+  nav {
+    display: none;
+  }
+  .startPage_wrapper {
+    height: 985px;
+  }
+  h1 {
+    font-size: 60px;
+    text-align: center;
+    line-height: 70px;
+    margin-top: 150px;
+  }
+  #startPage_imgs-lemon {
+    left: 49px;
+    top: 604px;
+    width: 266px;
+    height: 232px;
+  }
+  #startPage_imgs-nootris {
+    bottom: 226px;
+    left: 244px;
+    width: 112px;
+    height: 318px;
+  }
+  #startPage_imgs-ginger {
+    bottom: 234px;
+    left: 157px;
+    width: 248px;
+    height: 204px;
+  }
+  .startPage_info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .startPage_info-textH1, .startPage_info-textH2, h2 {
+    width: 400px;
+    text-align: center;
+    margin: 10px 0;
+  }
+  h2 {
+    margin-top: 450px;
+  }
+  h3 {
+    font-size: 26px;
+    width: 440px;
+  }
+  .salePage_wrapper {
+    height: 1175px;
+  }
+  .salePage_price {
+    margin-bottom: 20px;
+    margin-top: 60px;
+  }
+  .salePage_info {
+    flex-wrap: wrap;
+    width: 400px;
+  }
+  #salePage_info-nootris-text1 {
+    margin-top: 85px;
+    font-size: 34px;
+  }
+  .salePage_info div:nth-child(2) {
+    order: -1;
+    margin-bottom: 65px;
+  }
+  .salePage_info-item-text1 {
+    margin-top: 20px;
+  }
+  #salePage_info-nootris {
+    width: 320px;
+    height: 107px;
+  }
+  button {
+    margin-top: 85px;
+  }
+}
+@media (max-width: 320px) {
+  header {
+    position: fixed;
+    z-index: 10;
+    width: 100%;
+  }
+  .header {
+    width: 420px;
+  }
+  .header_basket {
+    left: 130px;
+  }
+  .startPage {
+    width: 450px;
+  }
+  .header_menu-btn {
+    display: block;
+  }
+  nav {
+    display: none;
+  }
+  .startPage_wrapper {
+    height: 985px;
+  }
+  h1 {
+    font-size: 60px;
+    text-align: center;
+    line-height: 70px;
+    margin-top: 150px;
+  }
+  #startPage_imgs-lemon {
+    left: 49px;
+    top: 604px;
+    width: 266px;
+    height: 232px;
+  }
+  #startPage_imgs-nootris {
+    bottom: 226px;
+    left: 244px;
+    width: 112px;
+    height: 318px;
+  }
+  #startPage_imgs-ginger {
+    bottom: 234px;
+    left: 157px;
+    width: 248px;
+    height: 204px;
+  }
+  .startPage_info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .startPage_info-textH1, .startPage_info-textH2, h2 {
+    width: 400px;
+    text-align: center;
+    margin: 10px 0;
+  }
+  h2 {
+    margin-top: 450px;
+  }
+  h3 {
+    font-size: 26px;
+    width: 440px;
+  }
+  .salePage_wrapper {
+    height: 1175px;
+  }
+  .salePage_price {
+    margin-bottom: 20px;
+    margin-top: 60px;
+  }
+  .salePage_info {
+    flex-wrap: wrap;
+    width: 400px;
+  }
+  #salePage_info-nootris-text1 {
+    margin-top: 85px;
+    font-size: 34px;
+  }
+  .salePage_info div:nth-child(2) {
+    order: -1;
+    margin-bottom: 65px;
+  }
+  .salePage_info-item-text1 {
+    margin-top: 20px;
+  }
+  #salePage_info-nootris {
+    width: 320px;
+    height: 107px;
+  }
+  button {
+    margin-top: 85px;
+  }
+}
 
 /*# sourceMappingURL=style.css.map */
