--- a/styles/style.css
+++ b/styles/style.css
@@ -6,11 +6,15 @@
   font-size: 18px;
 }
 
+.isVisible {
+  overflow: hidden;
+}
+
 header {
   background: #111111;
   height: 80px;
   position: relative;
-  z-index: 5;
+  z-index: 10;
 }
 header ul {
   display: flex;
@@ -19,9 +23,17 @@ header ul {
   width: 956px;
   padding-left: 13px;
 }
+header ul li:hover {
+  color: #FCDA28;
+  cursor: pointer;
+}
 
 a {
   color: #FFFFFF;
+}
+a:hover {
+  color: #FCDA28;
+  cursor: pointer;
 }
 
 .header {
@@ -34,12 +46,20 @@ a {
   align-items: center;
 }
 
+.header_logo {
+  position: relative;
+  z-index: 10;
+}
+
 .header_basket {
   position: relative;
 }
 
 .header_basket-img {
   margin-right: 22px;
+}
+.header_basket-img:hover {
+  cursor: pointer;
 }
 
 .header_basket__quantity {
@@ -68,7 +88,6 @@ a {
   position: relative;
   z-index: 2;
   overflow: hidden;
-  right: 20px;
   top: 5px;
 }
 .header_menu-btn span {
@@ -90,7 +109,14 @@ a {
   top: calc(50% + 5px);
 }
 
-/* Меню, которое будет появляться */
+.menu.active {
+  transform: translateX(0);
+}
+
+.menu li {
+  list-style-type: none;
+}
+
 /* Меняем гамбургер иконку, когда меню открыто */
 .header_menu-btn.active span:nth-of-type(1) {
   top: 50%;
@@ -370,18 +396,32 @@ button:active {
   }
   .header {
     width: 720px;
+    justify-content: space-between;
   }
-  .header_basket {
-    left: 230px;
+  /* Меню, которое будет появляться */
+  .menu {
+    position: fixed;
+    top: 0;
+    width: 320px;
+    height: 600px;
+    background: #111111;
+    transform: translateX(-100%);
+    transition: transform 0.5s;
+    left: 0;
+  }
+  ul {
+    flex-direction: column;
+    font-weight: 700;
+    position: relative;
+    left: -100%;
+    top: 115px;
+    line-height: 75px;
   }
   .startPage {
     width: 740px;
   }
   .header_menu-btn {
     display: block;
-  }
-  nav {
-    display: none;
   }
   h1 {
     font-size: 100px;
@@ -449,8 +489,16 @@ button:active {
   .header {
     width: 420px;
   }
-  .header_basket {
-    left: 130px;
+  /* Меню, которое будет появляться */
+  .menu {
+    position: fixed;
+    top: 0;
+    width: 320px;
+    height: 600px;
+    background: #111111;
+    transform: translateX(-100%);
+    transition: transform 0.5s;
+    left: 0;
   }
   .startPage {
     width: 450px;
@@ -458,8 +506,13 @@ button:active {
   .header_menu-btn {
     display: block;
   }
-  nav {
-    display: none;
+  ul {
+    flex-direction: column;
+    font-weight: 700;
+    position: relative;
+    left: -100%;
+    top: 115px;
+    line-height: 75px;
   }
   .startPage_wrapper {
     height: 985px;
@@ -544,9 +597,6 @@ button:active {
   .header {
     width: 300px;
   }
-  .header_basket {
-    left: 30px;
-  }
   .startPage {
     width: 300px;
     justify-content: center;
@@ -554,8 +604,24 @@ button:active {
   .header_menu-btn {
     display: block;
   }
-  nav {
-    display: none;
+  /* Меню, которое будет появляться */
+  .menu {
+    position: fixed;
+    top: 0;
+    width: 320px;
+    height: 600px;
+    background: #111111;
+    transform: translateX(-100%);
+    transition: transform 0.5s;
+    left: 0;
+  }
+  ul {
+    flex-direction: column;
+    font-weight: 700;
+    position: relative;
+    left: -100%;
+    top: 115px;
+    line-height: 75px;
   }
   .startPage_wrapper {
     height: 900px;
