--- a/styles/style.sass
+++ b/styles/style.sass
@@ -11,20 +11,29 @@ $orange: #FCB500
   font-family: "Rubik", sans-serif
   font-size: 18px
 
+.isVisible
+  overflow: hidden
+
 header
   background: $black
   height: 80px
   position: relative
-  z-index: 5
+  z-index: 10
   ul
     display: flex
     align-items: center
     justify-content: space-between
     width: 956px
     padding-left: 13px
+    li:hover
+      color: $yellow
+      cursor: pointer
 
 a
   color: $white
+  &:hover
+    color: $yellow
+    cursor: pointer
 
 .header
   margin: 0 auto
@@ -35,11 +44,17 @@ a
   justify-content: space-between
   align-items: center
 
+.header_logo
+  position: relative
+  z-index: 10
+
 .header_basket
   position: relative
 
 .header_basket-img
   margin-right: 22px
+  &:hover
+    cursor: pointer
 
 .header_basket__quantity
   background: $orange
@@ -65,7 +80,6 @@ a
   position: relative
   z-index: 2
   overflow: hidden
-  right: 20px
   top: 5px
   span
     width: 30px
@@ -83,22 +97,11 @@ a
 .header_menu-btn span:nth-of-type(3)
   top: calc(50% + 5px)
 
-/* Меню, которое будет появляться */
-//.menu
-//  position: fixed
-//  top: 0
-//  width: 320px
-//  height: 823px
-//  background: #292929
-//  transform: translateX(100%)
-//  transition: transform 0.5s
-//  right: 0
-//
-//.menu.active
-//  transform: translateX(0)
-//
-//.menu li
-//  list-style-type: none
+.menu.active
+  transform: translateX(0)
+
+.menu li
+  list-style-type: none
 
 /* Меняем гамбургер иконку, когда меню открыто */
 .header_menu-btn.active span:nth-of-type(1)
@@ -340,18 +343,32 @@ button
 
   .header
     width: 720px
+    justify-content: space-between
 
-  .header_basket
-    left: 230px
+  /* Меню, которое будет появляться */
+  .menu
+    position: fixed
+    top: 0
+    width: 320px
+    height: 600px
+    background: $black
+    transform: translateX(-100%)
+    transition: transform 0.5s
+    left: 0
+
+  ul
+    flex-direction: column
+    font-weight: 700
+    position: relative
+    left: -100%
+    top: 115px
+    line-height: 75px
 
   .startPage
     width: 740px
 
   .header_menu-btn
     display: block
-
-  nav
-    display: none
 
   h1
     font-size: 100px
@@ -418,8 +435,16 @@ button
   .header
     width: 420px
 
-  .header_basket
-    left: 130px
+  /* Меню, которое будет появляться */
+  .menu
+    position: fixed
+    top: 0
+    width: 320px
+    height: 600px
+    background: $black
+    transform: translateX(-100%)
+    transition: transform 0.5s
+    left: 0
 
   .startPage
     width: 450px
@@ -427,8 +452,13 @@ button
   .header_menu-btn
     display: block
 
-  nav
-    display: none
+  ul
+    flex-direction: column
+    font-weight: 700
+    position: relative
+    left: -100%
+    top: 115px
+    line-height: 75px
 
   .startPage_wrapper
     height: 985px
@@ -512,9 +542,6 @@ button
   .header
     width: 300px
 
-  .header_basket
-    left: 30px
-
   .startPage
     width: 300px
     justify-content: center
@@ -522,8 +549,24 @@ button
   .header_menu-btn
     display: block
 
-  nav
-    display: none
+  /* Меню, которое будет появляться */
+  .menu
+    position: fixed
+    top: 0
+    width: 320px
+    height: 600px
+    background: $black
+    transform: translateX(-100%)
+    transition: transform 0.5s
+    left: 0
+
+  ul
+    flex-direction: column
+    font-weight: 700
+    position: relative
+    left: -100%
+    top: 115px
+    line-height: 75px
 
   .startPage_wrapper
     height: 900px
