feat: refactor styles

--- a/styles/style.sass
+++ b/styles/style.sass
@@ -14,7 +14,7 @@ $orange: #FCB500
 
 @mixin flex-space-between ()
   display: flex
-  justify-content: center
+  justify-content: space-between
   align-items: center
 
 *
