--- a/styles/style.css
+++ b/styles/style.css
@@ -19,7 +19,7 @@ header {
 
 .header_nav__list {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   width: 956px;
   padding-left: 13px;
@@ -44,7 +44,7 @@ header {
   width: 1310px;
   color: #FFFFFF;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
 }
 
@@ -244,7 +244,7 @@ header {
 
 .salePage_price {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   width: 270px;
   margin-top: 77px;
@@ -268,7 +268,7 @@ header {
 
 .salePage_info {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   width: 1087px;
   margin-top: 49px;
