--- a/styles/style.sass
+++ b/styles/style.sass
@@ -52,17 +52,19 @@ header
   color: $white
   @include flex-space-between ()
 
-.header_logo
+.header__logo
   position: relative
   z-index: 10
+  &:hover
+    cursor: pointer
 
 .header_basket
   position: relative
+  &:hover
+    cursor: pointer
 
 .header_basket__img
   margin-right: 22px
-  &:hover
-    cursor: pointer
 
 .header_basket__quantity
   background: $orange
@@ -77,10 +79,10 @@ header
   left: 21px
   bottom: -6px
 
-.header_burger
+.header__burger
   display: none
 
-.header_burger
+.header__burger
   width: 30px
   height: 30px
   position: relative
@@ -97,28 +99,27 @@ header
     background-color: $white
     transition: all 0.5s
 
-.header_burger span:nth-of-type(2)
+.header__burger span:nth-of-type(2)
   top: calc(50% - 5px)
 
-.header_burger span:nth-of-type(3)
+.header__burger span:nth-of-type(3)
   top: calc(50% + 5px)
 
-.header_nav.active
+.header__nav.active
   transform: translateX(0)
 
 .header_nav__list__item
   list-style-type: none
 
-/* Меняем гамбургер иконку, когда меню открыто */
-.header_burger.active span:nth-of-type(1)
+.header__burger.active span:nth-of-type(1)
   top: 50%
   transform: translate(-90%, 0%) rotate(90deg)
 
-.header_burger.active span:nth-of-type(2)
+.header__burger.active span:nth-of-type(2)
   top: 50%
   transform: translate(-50%, 0%) rotate(90deg)
 
-.header_burger.active span:nth-of-type(3)
+.header__burger.active span:nth-of-type(3)
   top: 50%
   transform: translate(-10%, 0%) rotate(90deg)
 
@@ -191,7 +192,7 @@ header
   bottom: 15px
   left: -66px
 
-.salePage_wrapper
+.salePage__wrapper
   background: $black
   height: 926px
 
@@ -339,7 +340,6 @@ header
   .salePage_info
     width: 960px
 
-/* Portrait tablets and small desktops */
 @media (min-width: 768px) and (max-width: 991px)
   header
     position: fixed
@@ -350,7 +350,7 @@ header
     width: 720px
     justify-content: space-between
 
-  .header_nav
+  .header__nav
     position: fixed
     top: 0
     width: 320px
@@ -371,7 +371,7 @@ header
   .startPage
     width: 740px
 
-  .header_burger
+  .header__burger
     display: block
 
   .startPage_info__title
@@ -410,7 +410,7 @@ header
     font-size: 35px
     width: 620px
 
-  .salePage_wrapper
+  .salePage__wrapper
     height: 1175px
 
   .salePage_price
@@ -439,7 +439,7 @@ header
   .header
     width: 420px
 
-  .header_nav
+  .header__nav
     position: fixed
     top: 0
     width: 320px
@@ -452,7 +452,7 @@ header
   .startPage
     width: 450px
 
-  .header_burger
+  .header__burger
     display: block
 
   .header_nav__list
@@ -508,7 +508,7 @@ header
     font-size: 26px
     width: 440px
 
-  .salePage_wrapper
+  .salePage__wrapper
     height: 1175px
 
   .salePage_price
@@ -550,10 +550,10 @@ header
     width: 300px
     justify-content: center
 
-  .header_burger
+  .header__burger
     display: block
 
-  .header_nav
+  .header__nav
     position: fixed
     top: 0
     width: 320px
@@ -603,7 +603,7 @@ header
     flex-direction: column
     align-items: center
 
-  .startPage_info__text1, .startPage_info-textH2,
+  .startPage_info__text1, .startPage_info__text2,
   .startPage_info__subtitle
     width: 300px
     text-align: center
@@ -614,7 +614,8 @@ header
     margin-top: 30px
 
   .startPage_info__subtitle
-    margin-top: 288px
+    margin-top: 345px
+    font-size: 29px
 
   .salePage_title
     font-size: 17px
@@ -622,8 +623,8 @@ header
     line-height: 30px
     margin-top: 75px
 
-  .salePage_wrapper
-    height: 1250px
+  .salePage__wrapper
+    height: 1300px
 
   .salePage_price
     margin-bottom: 20px
@@ -639,7 +640,7 @@ header
   .salePage_info__item
     margin-bottom: 45px
 
-  #salePage_info-nootris-text1
+  #salePage_info__item-nootris-text1
     margin: 75px 0 0
     font-size: 25px
     text-align: center
@@ -648,7 +649,7 @@ header
     order: -1
     margin-bottom: 65px
 
-  .salePage_info-item-text1
+  .salePage_info__item-text1
     margin-top: 20px
 
   #salePage_info__item-virus-text1
